infra-deployment/rails-bank-vpc/00-vpc.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr_block

  enable_dns_hostnames = true
  enable_dns_support = true

  tags = {
    name = "${var.env}-main"
  }
}
